4.2.2
- Fixed memory leak. Localized strings obtained from Kodi never were freed.

4.2.1
- updated language files from Transifex

4.2.0
- PVR API v5.7.0: Add stubs for IsEPGTagRecordable, IsEPGTagPlayable and GetEPGTagStreamProperties
- PVR API v5.7.0: Remove EPG_TAG::iChannelNumber, add EPG_TAG::iChannelUniqueId.

4.1.3
- PVR API v5.6.0: Drop GetLiveStreamURL
- PVR API v5.6.0: Drop PVR_RECORDING::strStreamURL
- PVR API v5.6.0: Add stubs for GetChannelStreamProperties and GetRecordingStreamProperties

4.1.2
- PVR API v5.5.0: Add series link support
- PVR API v5.5.0: Drop GetChannelSwitchDelay
- PVR API v5.5.0: Add stub for GetStreamTimes (can be implemented later)

4.1.1
- PVR API v5.4.0: Drop SwitchChannel

4.1.0
- PVR API v5.3.0: Add implementation for GetDescrambleInfo
- PVR API v5.3.0: Adapt definition of epg based timer rule (Added PVR_TIMER_TYPE_SUPPORTS_ANY_CHANNEL attribute)
- PVR API v5.3.0: Add implementation for SetRecordingLifetime and for PVR_ADDON_CAPABILITIES lifetime values
- PVR API v5.3.0: Add support for PVR_ADDON_CAPABILITIES.bSupportsRecordingsRename

4.0.17
- Fixed timer/recordings lifetime special values mapping ("until space needed", "forever")

4.0.16
- Added support for genre to recordings

4.0.15
- Added support for 'default' recording priority setting value

4.0.14
- Readded server based play count/position for recordings (HTSP v27 and up)

4.0.13
- PVR API: Removed unused addon interface function

4.0.12
- Updated Debian package control
- PVR API: addon callback changes

4.0.11
- PVR API: Removed obsolete version functions

4.0.10
- set dependency version values automatically during build
- PVR API: Removed unused addon interface functions

4.0.9
- fixed: timeshift state and data calculation if demuxer is not active (e.g. when playing a recording)

4.0.8
- revert server based playstatus, tvheadend is not compatible at the moment

4.0.7
- fixed duplicate 'prevent duplicate episodes' timer settings values

4.0.6
- added HTSP v26 support 